# firmware-abstraction-facility

./: CMakeLists.txt  LICENSE  README.md  apply_linker.py  library.json
conf/: faf_linker_espressif32.ld  faf_linker_native.ld
docs/en-us/: Capabilities.md  DSL_Conf.md  Driver.md  Manager.md  Provider.md
docs/en-us/guide/: Config_Guide.md  Driver_Creation_Guide.md
docs/pt-br/: Capabilities.md  DSL_Conf.md  Driver.md  Manager.md  Provider.md
docs/pt-br/guide/: Config_Guide.md  Driver_Creation_Guide.md
examples/hello_faf/: platformio.ini
examples/hello_faf/include/: Board_Conf.hpp
examples/hello_faf/src/: Board_Conf.cpp  main.cpp
include/FAF/: FAF.h  FAF_BoardDefinition.h  FAF_Deffs.h  FAF_Dispatch.h  FAF_Driver.h  FAF_DriverDescriptor.h  FAF_Driver_Internal.h  FAF_Includes.h  FAF_Manager.h  FAF_Provider.h  FAF_ProviderConfig.h  FAF_Setup.h  FAF_Setup_Internal.h
include/FAF/contracts/: FAF_Connectable.h  FAF_Reportable.h  FAF_Toggleable.h
include/FAF/drivers/esp32/arduino/: ArduinoDrivers.h  ArduinoDrivers_Internal.h
include/FAF/drivers/esp32/arduino/led/: ArduinoLED_API.h  ArduinoLED_Class.h  ArduinoLED_Conf.h
include/FAF/drivers/esp32/arduino/mqtt/: ArduinoMQTT_API.h  ArduinoMQTT_Class.h  ArduinoMQTT_Conf.h
include/FAF/drivers/esp32/arduino/wifi/: ArduinoWifi_API.h  ArduinoWifi_Class.h  ArduinoWifi_Conf.h
include/FAF/types/: FAF_Device.h  FAF_Iterator.h  FAF_PanicContext.h  FAF_Repository.h
include/FAF/utils/: FAF_Def.h  FAF_Mqtt_Packet.h  FAF_Panic.h
include/FAF_Config/: FAF_Conf.h
include/FAF_Core/: FAF_Container.h  FAF_Dispatch.h  FAF_Registry.h
src/FAF_Common/: FAF_Panic.c
src/FAF_Core/: FAF_Container.c  FAF_Container_Internal.h  FAF_Registry.c
src/drivers/esp32/arduino/: ArduinoLED_Impl.cpp  ArduinoMQTT_Impl.cpp  ArduinoWifi_Impl.cpp
src/infra/: FAF_Manager.c  FAF_Provider.c  FAF_Provider_Itn.h
test/: CMakeLists.txt  main_t.c
test/FAF_Core_U/: CMakeLists.txt
test/FAF_Core_U/inc/: Mock_Conf.h
test/FAF_Core_U/inc/devices/mock/: FAF_MockDevice_API.h  FAF_MockDevice_Class.h
test/FAF_Core_U/inc/units/: FAF_Container_T.h  FAF_Dispatcher_T.h  FAF_Registry_T.h
test/FAF_Core_U/src/: main.c
test/FAF_Core_U/src/conf/: Mock_Conf.c
test/FAF_Core_U/src/devices/mock/: FAF_MockDevice_Impl.c
test/FAF_Core_U/src/units/: FAF_Container_T.c  FAF_Dispatcher_T.c  FAF_Registry_T.c
test/mock/: BoardDefinition.c
test/mock/config/: CBoard_Stress.c  CBoard_Stress.h  CBoard_Valid.c  CBoard_Valid.h
test/mock/drivers/: DummyDriver.c  DummyDriver.h  DummyDriver_API.h  DummyDriver_Class.h  DummySignature.h
test/units/manager_u/: Manager_t.c  Manager_t.h
test/units/memory_u/: Memory_t.c  Memory_t.h
test/units/provider_u/: Provider_t.c  Provider_t.h
